fix(nav): Bring social links to the front on mobile devices.

--- a/sass/css/3-modules/_header.scss
+++ b/sass/css/3-modules/_header.scss
@@ -8,5 +8,6 @@
     overflow: hidden;
     background: inherit;
     transition: all 0.25s ease;
+    z-index: 0;
   }
 }
